--- a/.github/workflows/validate_workflow.yml
+++ b/.github/workflows/validate_workflow.yml
@@ -8,13 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+
+    - name: Dump some environment info
+      run: |
+        go version
+        terraform --version
+        ls
     
     - name: Install GorillaStack Terraform Provider
-      run: go get -d github.com/gorillastack/terraform-provider-gorillastack
-    - name: Install GorillaStack Terraform Provider 1
-      run: cd $GOPATH/src/github.com/gorillastack/terraform-provider-gorillastack
-    - name: Install GorillaStack Terraform Provider 2
-      run: make
+      run: |
+        go get -d github.com/gorillastack/terraform-provider-gorillastack
+        cd $GOPATH/src/github.com/gorillastack/terraform-provider-gorillastack
+        make
 
     - name: Initialize the Provider/templates
       run: terraform init
