using our own docker image

--- a/.github/workflows/validate_workflow.yml
+++ b/.github/workflows/validate_workflow.yml
@@ -4,7 +4,7 @@ jobs:
 
   run:
     name: Validate GorillaStack config templates
-    container: hashicorp/terraform:light
+    container: gorillastack/github-actions-base:latest
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
