--- a/.github/workflows/validate_workflow.yml
+++ b/.github/workflows/validate_workflow.yml
@@ -10,6 +10,7 @@ jobs:
 
     - name: Dump some environment info
       run: |
+        env
         go version
         terraform --version
         ls
