--- a/.github/workflows/apply_workflow.yml
+++ b/.github/workflows/apply_workflow.yml
@@ -1,14 +1,9 @@
 on:
-  push:
-    paths:
-      - "*.tf"
-  pull-request:
-    branches:
-      - master
+  push: master
 
 jobs:
   run:
-    name: Validate GorillaStack config templates
+    name: Apply GorillaStack config templates
     container: gorillastack/github-actions-base:latest
     runs-on: ubuntu-latest
     steps:
@@ -33,3 +28,6 @@ jobs:
 
     - name: Validate Terraform templates
       run: terraform validate
+
+    - name: Apply Terraform templates
+      run: terraform apply
