--- a/.github/workflows/apply_workflow.yml
+++ b/.github/workflows/apply_workflow.yml
@@ -32,7 +32,4 @@ jobs:
       run: terraform validate
 
     - name: Apply Terraform templates
-      run: terraform apply \
-        -auto-approve \
-        -var="api_key=${{ secrets.GORILLASTACK_API_KEY }}" \
-        -var="team_id=${{ secrets.GORILLASTACK_TEAM_ID }}"
+      run: terraform apply -auto-approve -var="api_key=${{ secrets.GORILLASTACK_API_KEY }}" -var="team_id=${{ secrets.GORILLASTACK_TEAM_ID }}"
