some more info for debugging

--- a/.github/workflows/apply_workflow.yml
+++ b/.github/workflows/apply_workflow.yml
@@ -42,7 +42,11 @@ jobs:
         aws s3 cp s3://$BUCKET_NAME/ . --include "*.tfstate"
 
     - name: Apply Terraform templates
-      run: terraform apply -auto-approve -var="api_key=${{ secrets.GORILLASTACK_API_KEY }}" -var="team_id=${{ secrets.GORILLASTACK_TEAM_ID }}"
+      run: |
+        terraform apply -auto-approve -var="api_key=${{ secrets.GORILLASTACK_API_KEY }}" -var="team_id=${{ secrets.GORILLASTACK_TEAM_ID }}"
+        pwd
+        ls -ltra
+        cat terraform.tfstate
 
     - name: Upload .tfstate to S3
       env:
@@ -51,5 +55,8 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
       run: |
+        pwd
+        ls -ltra
+        cat terraform.tfstate
         BUCKET_NAME=$(aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].Outputs[0].OutputValue" --output text)
         aws s3 cp terraform.tfstate s3://$BUCKET_NAME/ 
