--- a/.github/workflows/apply_workflow.yml
+++ b/.github/workflows/apply_workflow.yml
@@ -39,7 +39,7 @@ jobs:
         AWS_DEFAULT_REGION: us-east-1
       run: |
         BUCKET_NAME=$(aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].Outputs[0].OutputValue" --output text)
-        aws s3 cp s3://$BUCKET_NAME/terraform.tfstate . || true
+        aws s3 cp s3://$BUCKET_NAME/$GITHUB_REPOSITORY/$GITHUB_REF/terraform.tfstate . || true
 
     - name: Apply Terraform templates
       run: terraform apply -auto-approve -var="api_key=${{ secrets.GORILLASTACK_API_KEY }}" -var="team_id=${{ secrets.GORILLASTACK_TEAM_ID }}"
@@ -52,4 +52,4 @@ jobs:
         AWS_DEFAULT_REGION: us-east-1
       run: |
         BUCKET_NAME=$(aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].Outputs[0].OutputValue" --output text)
-        aws s3 cp terraform.tfstate s3://$BUCKET_NAME/ 
+        aws s3 cp terraform.tfstate s3://$BUCKET_NAME/$GITHUB_REPOSITORY/$GITHUB_REF/ 
