--- a/cf/github-action-bucket-template.yml
+++ b/cf/github-action-bucket-template.yml
@@ -3,6 +3,8 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       AccessControl: Private
+      VersioningConfiguration:
+        Status: Enabled
     DeletionPolicy: Retain
   GHActionsTFUser:
     Type: AWS::IAM::User
