--- a/action/action.yml
+++ b/action/action.yml
@@ -7,13 +7,13 @@ inputs:
   action:
     description: 'The action type (currently "validate" and "apply" are available)'
     required: true
-    default: 'validate'
+    default: validate
 runs:
   using: 'docker'
   image: 'docker://gorillastack/github-actions-base:latest'
   args:
   - '${{ inputs.action }}'
-  entrypoint: "/opt/action.sh"
+  # entrypoint: "bash /opt/action.sh"
   # entrypoint: string
   # env:
   #   string: string
