moving action.yml to root of repo

--- a/.github/workflows/apply_workflow.yml
+++ b/.github/workflows/apply_workflow.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@master
 
     - name: Apply templates
-      uses: './action'
+      uses: './'
       with:
         action: apply
       env:
