--- a/action.yml
+++ b/action.yml
@@ -8,12 +8,30 @@ inputs:
     description: 'The action type (currently "validate" and "apply" are available)'
     required: true
     default: validate
+  stack_name:
+    description: 'The name of the tfstate bucket stack'
+    required: true
+    default: github-actions-gorillastack-tfstate
+  aws_default_region:
+    description: 'The region in which you deployed the tfstate bucket stack'
+    required: true
+    default: us-east-1
+  aws_access_key_id:
+    description: 'The AWS Access Key Id for the user with privileges to access the tfstate bucket'
+    required: true
+    default: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  aws_secret_access_key:
+    description: 'The AWS Secret Access Key for the user with privileges to access the tfstate bucket'
+    required: true
+    default: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  gorillastack_api_key:
+    description: 'GorillaStack API Key, which is read-write or read-only, tied to your user identity'
+    required: true
+  gorillastack_team_id:
+    description: 'GorillaStack Team Id, sets context of which team/tenant you are targeting'
+    required: true
 runs:
   using: 'docker'
   image: 'docker://gorillastack/github-actions-base:latest'
   args:
   - '${{ inputs.action }}'
-  # entrypoint: "bash /opt/action.sh"
-  # entrypoint: string
-  # env:
-  #   string: string
