--- a/.github/workflows/apply_workflow.yml
+++ b/.github/workflows/apply_workflow.yml
@@ -16,3 +16,5 @@ jobs:
       uses: './'
       with:
         action: apply
+        aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
